<resources>
    <string name="app_name">TrimCheck-Barber</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="error_toast_invalid_email">Invalid email address</string>
    <string name="str_session_expired">Session expired</string>
    <string name="str_enter_mobile_number">Please enter your phone number</string>
    <string name="str_send_message">Send message</string>
    <string name="str_or_connect_using_social">or connect using a social account</string>
    <string name="str_title">Title</string>
    <string name="str_enter_four_digit_code">Enter the 4 digit code sent to you</string>
    <string name="sample_number">8908908900</string>
    <string name="str_terms_conditions">By entering the verification code,you agree to the agreements.</string>
    <string name="str_wrong_code">Wrong code !</string>
    <string name="str_code_not_received">I didn\'t receive a code?</string>
    <string name="str_user_name">User Name</string>
    <string name="str_edit_profile">Edit  profile</string>
    <string name="str_my_trips">My Trips</string>
    <string name="str_logout">Logout</string>
    <string name="str_customer_services">Customer service</string>
    <string name="verification">Verification</string>
    <string name="str_first_name">First name</string>
    <string name="str_email">Email</string>
    <string name="str_phone_number">Phone number</string>
    <string name="str_last_name">Last name</string>
    <string name="str_update">Update</string>
    <string name="str_welcome_to_barber_app">Welcome to the new Barber app</string>
    <string name="str_sign_in">Sign In</string>
    <string name="str_book_a_barber">Or book a barber</string>
    <string name="str_register">Register</string>
    <string name="str_password">Password</string>
    <string name="str_forgot_password">Forgot password?</string>
    <string name="str_forgot_password_">Forgot password</string>
    <string name="str_social_login">Social Login</string>
    <string name="str_txt_password_screen">Please provider your registered email address. We will send you a  password reset link.</string>
    <string name="str_email_address">Email Address</string>
    <string name="str_submit">Submit</string>
    <string name="str_resend">Resend mail</string>
    <string name="str_lets_start">Let\'s start by creating your account</string>
    <string name="str_verify_mobile">Verify your mobile</string>
    <string name="str_waiting_for_automatically_detect">Waiting to automatically  detect and SMS sent sent</string>
    <string name="str_to">to +1234567890</string>
    <string name="str_wrong_number">Wrong number?</string>
    <string name="str_four_digits_code">Enter 4 -digit code</string>
    <string name="str_verifi_now">Verify now</string>
    <string name="str_resend_otp">Resend OTP</string>
    <string name="str_invitation_code">Invitation code</string>
    <string name="str_continue">Continue</string>
    <string name="str_cnfrm_pass">Confirm Password</string>
    <string name="str_barber">Barber</string>
    <string name="str_barber_desc">Working at barbershop</string>
    <string name="str_iam_a">I am a..</string>
    <string name="str_callout_barber">Call out barber</string>
    <string name="str_your_address">Your address</string>
    <string name="str_where_can">Where can clients find you?</string>
    <string name="str_street_address"><![CDATA[Street address & number]]></string>
    <string name="str_appartmet_number">Apartment or suite number(optional)</string>
    <string name="str_city">City</string>
    <string name="str_zipcode">Zipcode</string>
    <string name="str_trainee">Trainee</string>
    <string name="str_callout_barber_desc">Receive call out requests</string>
    <string name="str_trainee_barber_desc">Offer free haircuts for experience</string>
    <string name="str_welcome">Welcome</string>
    <string name="str_your_opening_hours">Your Opening Hours</string>
    <string name="str_when_can">When can clients book with you?</string>
    <string name="str_empty_space">Found empty space</string>
    <string name="str_day">Day</string>
    <string name="str_service_detail">Service Detail</string>
    <string name="str_you_can_add_more">You can add more details of the service later.</string>
    <string name="str_service_name">Service Name</string>
    <string name="str_duration">Duration</string>
    <string name="str_price_type">Price Type</string>
    <string name="str_price">Price</string>
    <string name="str_save">Save</string>
    <string name="str_delete_service">Delete service</string>
    <string name="title_appointments">Appointments</string>
    <string name="title_Callouts">Call Outs</string>
    <string name="title_clients">Clients</string>
    <string name="title_Message">Messages</string>
    <string name="title_more">More</string>
    <string name="str_clients">Clients</string>
    <string name="str_use_profissional_client_base">Want a professional client base?</string>
    <string name="str_setting_up_your_client">Setting up your client base and encouraging clients to book is as simple as selecting contacts from your phone.</string>
    <string name="str_use_phone_contacts">Use Phone Contacts</string>
    <string name="str_or">or</string>
    <string name="str_otherwise_you">Otherwise you\'ll have to type each client indvidually.</string>
    <string name="str_manual">Manual</string>
    <string name="str_specialise_in">I specialise in..</string>
    <string name="str_afro_caribbean">Afro-Caribbean hair</string>
    <string name="str_asian_hair">Asian hair</string>
    <string name="str_caucasian">Caucasian hair</string>
    <string name="str_availabliity">Availability</string>
    <string name="str_profile">Profile</string>
    <string name="str_my_details">My Details</string>
    <string name="str_progress">Progress</string>
    <string name="str_rating_review"><![CDATA[Ratings & Reviews]]></string>
    <string name="str_setting">Settings</string>
    <string name="str_import_copy">Import Customers</string>
    <string name="str_rate_trim_check">Rate TrimCheck</string>
    <string name="str_privacy_terms"><![CDATA[Privacy & terms of use]]></string>
    <string name="str_support">Support</string>
    <string name="str_calender_sync">Calender sync</string>
    <string name="str_share_feedback">Share feedback</string>
    <string name="str_add_service">Add service</string>
    <string name="str_monday">Monday</string>
    <string name="str_tuesday">Tuesday</string>
    <string name="str_wednesday">Wednesday</string>
    <string name="str_thursday">Thursday</string>
    <string name="str_friday">Friday</string>
    <string name="str_Saturday">Saturday</string>
    <string name="str_sunday">Sunday</string>
    <string name="str_opening_time">Opening time</string>
    <string name="str_change">Change</string>
    <string name="str_closing_time">Closing time</string>
    <string name="str_done">Done</string>
    <string name="str_same_for_all">Same for all day</string>
    <string name="select_times">Select Time</string>
    <string name="error_firstName">Please enter your first name.</string>
    <string name="error_lastName">Plesae enter your last name</string>
    <string name="error_phone_number">Please provide a valid phone number</string>
    <string name="str_please_emte_mobile">Enter mobile number</string>
    <string name="str_edit_number">Edit my mobile number</string>
    <string name="str_at">at</string>
    <string name="error_user_name">Please provide a user name</string>
    <string name="error_email">Plesae provide a valid email</string>
    <string name="error_password">Password length should be minimum of 6.</string>
    <string name="error_password_not_matched">Password does not match.</string>
    <string name="error_otp">Enter your otp</string>
    <string name="str_accept_terms">By pressing \'\'continue\'\' you agree to TrimCheck\'s Terms of Use and Privacy Policy</string>
    <string name="error_accept_terms">Please accept terms and conditions</string>
    <string name="str_skip">Skip</string>
    <string name="str_serch_address">search postcode or address</string>
    <string name="str_welcome_txt"> Select all valid boxe(s)</string>
    <string name="str_your_business_address">Add your business address</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_opening_hours">Opening Hours</string>
    <string name="str_post_code">Post code</string>
    <string name="str_user_name_">\@Username</string>
    <string name="error_street">Please provide valid address</string>
    <string name="error_postal_code">Please provide valid postal code</string>
    <string name="str_what_service">What services can clients book with you</string>
    <string name="str_you_can_change">You can change services and categories later</string>
    <string name="str_show_off_workspace">Show off your workspace</string>
    <string name="str_photo_will_be_shown">Photo wil be displayed on your profile on the free TrimCheck app</string>
    <string name="error_service_name">Enter service name</string>
    <string name="error_duration">Provide service duration</string>
    <string name="error_price">Provide service price</string>
    <string name="error_type">Provider price type</string>
    <string name="str_accept_payment_methods">Accepted Payment Methods</string>
    <string name="str_card">Credit/Debit cards</string>
    <string name="str_cash">Cash</string>
    <string name="str_both">Both</string>
    <string name="str_card_desc">Better booking result</string>
    <string name="str_cash_desc">This may result in less customers.</string>
    <string name="str_both_desc">Accept cash and card payments.</string>
    <string name="error_phone_number_verify">Please verify your number</string>
    <string name="error_please_wait">Please wait for 5 seconds.</string>
    <string name="str_permission_denied">Permission required.</string>
    <string name="str_remove">Remove</string>
    <string name="str_about_your_business">About your business</string>
    <string name="str_short_desc">Short Description(Highly recommended)</string>
    <string name="str_edit">Edit</string>
    <string name="str_add_call_out_hours">Add call out hours</string>
    <string name="str_enter_otp">Enter OTP to verify mobile number</string>
    <string name="str_enter_otp_">Enter OTP</string>
    <string name="str_use_current_location">Use current location</string>
    <string name="str_enter_manually">Enter manually</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="str_cancelled">Cancel</string>
    <string name="str_appointments">Appointments</string>
    <string name="str_setup_stripe">Setup stripe payments</string>
    <string name="str_stripe_publish_key">Stripe publish key</string>
    <string name="str_secret_key">Stripe secret key</string>
    <string name="str_completed">Completed</string>
    <string name="str_basic_required_data">Basic requirements barber</string>
    <string name="str_Barber_address">Add barber address</string>
    <string name="str_add_working_hours">Add working hours</string>
    <string name="str_add_districts">Add serving districts</string>
    <string name="str_stripe_connent">Add stripe  account</string>
    <string name="str_add_barber_type">Add barber type</string>
    <string name="str_add_payment_type">Add payment type</string>
    <string name="str_update_remaining">You have to update all required fields to complete your account.</string>
    <string name="str_reedem">Apply Referal</string>
    <string name="str_reedem_text">You are eligible to reedem referal code after three successful card bookings.</string>
    <string name="str_enter_code">Enter code</string>
    <string name="str_enroute">Enroute</string>
</resources>