<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_cream_white"
    android:orientation="vertical">

    <include layout="@layout/layout_common_header_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/_10ssp">

        <com.app.barber.views.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10ssp"
            android:text="@string/str_stripe_publish_key" />

        <com.app.barber.views.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_grey_border"
            android:hint="pk_key_uwqtriqtrqrqbdfsdgfsk"
            android:maxLines="1"
            android:padding="@dimen/_10ssp"
            android:paddingTop="@dimen/_10ssp"
            android:singleLine="true" />

        <com.app.barber.views.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_10ssp"
            android:text="@string/str_secret_key" />

        <com.app.barber.views.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_grey_border"
            android:hint="************"
            android:maxLines="1"
            android:padding="@dimen/_10ssp"
            android:singleLine="true" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.app.barber.views.CustomTextView
            android:id="@+id/stripe_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10ssp"
            android:background="@drawable/rectangle_blue_drawable"
            android:gravity="center"
            android:padding="@dimen/_10ssp"
            android:text="@string/str_save"
            android:textColor="@color/color_white"
            android:textSize="@dimen/_14ssp" />

        <com.app.barber.views.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/str_or" />

        <com.app.barber.views.CustomTextView
            android:id="@+id/stripe_setup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10ssp"
            android:background="@drawable/rectangle_grey_border"
            android:gravity="center"
            android:padding="@dimen/_10ssp"
            android:text="@string/str_setup_stripe"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>


</LinearLayout>