<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_cream_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_app_background"
            android:orientation="vertical">

            <com.app.barber.views.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_10ssp"
                android:paddingRight="@dimen/_10ssp"
                android:singleLine="true"
                android:text="@string/str_your_address"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_16ssp" />

            <com.app.barber.views.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_10ssp"
                android:paddingLeft="@dimen/_10ssp"
                android:singleLine="true"
                android:text="@string/str_where_can"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10ssp">

            <com.app.barber.views.CustomTextView
                android:id="@+id/btn_current_loctaion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/position_marker"
                android:drawablePadding="@dimen/_10ssp"
                android:padding="@dimen/_10ssp"
                android:text="@string/str_use_current_location" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10ssp">

            <com.app.barber.views.CustomTextView
                android:id="@+id/btn_postcode_loctaion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/search"
                android:drawablePadding="@dimen/_10ssp"
                android:drawableTint="@color/color_grey"
                android:padding="@dimen/_10ssp"
                android:text="@string/str_post_code" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10ssp">

            <com.app.barber.views.CustomTextView
                android:id="@+id/btn_enter_manually"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/pen_01"
                android:drawablePadding="@dimen/_10ssp"
                android:padding="@dimen/_10ssp"
                android:text="@string/str_enter_manually" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>